Fix for level being aligned left on starbar. Should probably be in starbar-generic.css but that will hopefully be taken care of during unification

--- a/public/css/starbar-machinima.css
+++ b/public/css/starbar-machinima.css
@@ -559,6 +559,10 @@
 	text-align: center;
 }
 
+#sayso-starbar #starbar-player-console #starbar-level .sb_content .sb_user-level{
+	text-align: center;
+}
+
 #sayso-starbar #starbar-player-console #starbar-level .sb_popBoxInner .sb_popContent{
 	width: 570px;
 	height: 379px;
