--- a/public/css/starbar-movie.css
+++ b/public/css/starbar-movie.css
@@ -569,6 +569,10 @@
 	text-align: center;
 }
 
+#sayso-starbar #starbar-player-console #starbar-level .sb_content .sb_user-level{
+	text-align: center;
+}
+
 #sayso-starbar #starbar-player-console #starbar-level .sb_popBoxInner .sb_popContent{
 	width: 570px;
 	height: 400px;
